Fixed issue where .wrapper wasn't center aligned horizontaly

--- a/_src/_includes/scss/utilities/_wrapper.scss
+++ b/_src/_includes/scss/utilities/_wrapper.scss
@@ -10,5 +10,5 @@
 
     max-width: min(100%, (var(--_max-width) + (var(--_padding-inline) * 2)));
     padding-inline: var(--_padding-inline);
-    margin-block: auto;
+    margin-inline: auto;
 }
